Make image generator

--- a/meater.ipynb
+++ b/meater.ipynb
@@ -6,7 +6,7 @@
       "name": "meater.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyq1Dq0kvLP4bTHpn83Kxb",
+      "authorship_tag": "ABX9TyNsD3i00GzOUQ0pQIB1Wn8j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -204,10 +204,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "toRFYqNRcjNO",
-        "outputId": "01290f73-e72d-439d-f6e9-fa39100969ad"
+        "outputId": "3ad22872-df01-4b74-d452-07311251fec5"
       },
       "source": [
         "import os\n",
+        "import cv2 as cv\n",
         "\n",
         "\n",
         "base_dir = os.path.join('meat-dataset')\n",
@@ -218,21 +219,27 @@
         "fresh_meat_names = os.listdir(fresh_meat_dir)\n",
         "spoiled_meat_names = os.listdir(spoiled_meat_dir)\n",
         "\n",
-        "print('Fresh meat')\n",
+        "sample_img = cv.imread(os.path.join(fresh_meat_dir, fresh_meat_names[0]))\n",
+        "print('Fresh meat: {}'.format(len(fresh_meat_names)))\n",
+        "print('Shape: {}'.format(sample_img.shape))\n",
         "print(fresh_meat_names[:5])\n",
         "\n",
-        "print('\\nSpoiled meat')\n",
+        "sample_img = cv.imread(os.path.join(spoiled_meat_dir, spoiled_meat_names[0]))\n",
+        "print('\\nSpoiled meat: {}'.format(len(spoiled_meat_names)))\n",
+        "print('Shape: {}'.format(sample_img.shape))\n",
         "print(spoiled_meat_names[:5])"
       ],
-      "execution_count": 9,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Fresh meat\n",
+            "Fresh meat: 948\n",
+            "Shape: (720, 1280, 3)\n",
             "['test_20171016_210921D.jpg', 'test_20171017_105121D.jpg', 'test_20171017_120321D.jpg', 'test_20171017_014321D.jpg', 'test_20171017_012321D.jpg']\n",
             "\n",
-            "Spoiled meat\n",
+            "Spoiled meat: 948\n",
+            "Shape: (720, 1280, 3)\n",
             "['test_20171019_024121D.jpg', 'test_20171018_100721D.jpg', 'test_20171018_235921D.jpg', 'test_20171017_200921D.jpg', 'test_20171017_225721D.jpg']\n"
           ],
           "name": "stdout"
@@ -313,13 +320,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FZ5iSEfhgJaq"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FZ5iSEfhgJaq",
+        "outputId": "57a1958e-275b-475a-b095-194f182f50c0"
       },
       "source": [
-        ""
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "\n",
+        "# Make image data generator\n",
+        "train_datagen = ImageDataGenerator(\n",
+        "    rescale=1/255.0,        # Rescale the image\n",
+        "    rotation_range=45,      # Randomly rotating image 0-45 deg \n",
+        "    width_shift_range=0.2,  # Move image around in its frame\n",
+        "    height_shift_range=0.2, # Move image around in its frame\n",
+        "    shear_range=0.2,        # Shear the image randomly up to 20%\n",
+        "    zoom_range=0.2,         # Zoom the image randomly up to 20%\n",
+        "    horizontal_flip=True,   # Flip horizontally\n",
+        "    vertical_flip=True,     # Flip vertically\n",
+        "    fill_mode='nearest',    # Fill the pixel\n",
+        "    validation_split=0.2    # Split 80% training 20% validation\n",
+        ")\n",
+        "\n",
+        "# Make train generator\n",
+        "train_generator = train_datagen.flow_from_directory(\n",
+        "    base_dir,\n",
+        "    target_size=(128, 128),\n",
+        "    class_mode='binary',\n",
+        "    batch_size=32,\n",
+        "    subset='training'\n",
+        ")\n",
+        "\n",
+        "# Make validation generator\n",
+        "val_generator = train_datagen.flow_from_directory(\n",
+        "    base_dir,\n",
+        "    target_size=(128, 128),\n",
+        "    class_mode='binary',\n",
+        "    batch_size=32,\n",
+        "    subset='validation'\n",
+        ")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 1518 images belonging to 2 classes.\n",
+            "Found 378 images belonging to 2 classes.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
